[project]
name = "learngraph"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.14",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.4.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "nbformat>=5.10.4",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.2",
]
